--- a/src/app/views/head.ejs
+++ b/src/app/views/head.ejs
@@ -3,18 +3,75 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <style type="text/css">
+        /* Chat containers */
+        .container {
+          border: 2px solid #dedede;
+          background-color: #f1f1f1;
+          border-radius: 5px;
+          padding: 10px;
+          margin: 10px 0;
+        }
+
+        /* Darker chat container */
+        .darker {
+          border-color: #ccc;
+          background-color: #ddd;
+        }
+
+        /* Clear floats */
+        .container::after {
+          content: "";
+          clear: both;
+          display: table;
+        }
+
+        /* Style images */
+        .container b {
+          float: left;
+          max-width: 60px;
+          width: 100%;
+          margin-right: 20px;
+          border-radius: 50%;
+        }
+
+        /* Style the right image */
+        .container b.right {
+          float: right;
+          margin-left: 20px;
+          margin-right:0;
+        }
+
+        /* Style time text */
+        .time-right {
+          float: right;
+          color: #aaa;
+        }
+
+        /* Style time text */
+        .time-left {
+          float: left;
+          color: #999;
+        }
+
+    </style>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title><%= title %></title>
-<!--     <style>
-      body {
-        padding: 50px;
-        font: 13px Helvetica, Arial, sans-serif;
-      }
-      .error {
-          color: red
-      }
-      .success {
-          color: green;
-      }
-    </style> -->
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <h1 class="navbar-brand" href="#">Local Chat</h1>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/">Chat <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/history">History</a>
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+        </div>
+      </div>
+    </nav>
