--- a/src/app/views/head.ejs
+++ b/src/app/views/head.ejs
@@ -2,63 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <style type="text/css">
-        /* Chat containers */
-        .container {
-          border: 2px solid #dedede;
-          background-color: #f1f1f1;
-          border-radius: 5px;
-          padding: 10px;
-          margin: 10px 0;
-        }
-
-        /* Darker chat container */
-        .darker {
-          border-color: #ccc;
-          background-color: #ddd;
-        }
-
-        /* Clear floats */
-        .container::after {
-          content: "";
-          clear: both;
-          display: table;
-        }
-
-        /* Style images */
-        .container b {
-          float: left;
-          max-width: 60px;
-          width: 100%;
-          margin-right: 20px;
-          border-radius: 50%;
-        }
-
-        /* Style the right image */
-        .container b.right {
-          float: right;
-          margin-left: 20px;
-          margin-right:0;
-        }
-
-        /* Style time text */
-        .time-right {
-          float: right;
-          color: #aaa;
-        }
-
-        /* Style time text */
-        .time-left {
-          float: left;
-          color: #999;
-        }
-
-    </style>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= title %></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
