--- a/src/app/views/home.ejs
+++ b/src/app/views/home.ejs
@@ -1,29 +1,74 @@
 <%- include("head"); %>
 
-<!--
-<div class="alert alert-dark" role="alert">
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <% for(var i = 0; i < messages.length; i += 1) { %>
-      <%- messages[i] %>
-    <% } %>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-</div>
--->
+<style type="text/css">
+  /* Chat containers */
+  #chat-board {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+  }
 
-<div class="container">
-    <div id="messages" class="overflow-auto msgs" style="overflow-y: scroll; height:500px;">
+  /* Darker chat container */
+  .darker {
+    border-color: #ccc;
+    background-color: #ddd;
+  }
+
+  /* Clear floats */
+  .chat-box::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  /* Style images */
+  .chat-box b {
+    float: left;
+    max-width: 60px;
+    width: 100%;
+    margin-right: 20px;
+    border-radius: 50%;
+  }
+
+  /* Style the right image */
+  .chat-box b.right {
+    float: right;
+    margin-left: 20px;
+    margin-right:0;
+  }
+
+  /* Style time text */
+  .time-right {
+    float: right;
+    color: #aaa;
+  }
+
+  /* Style time text */
+  .time-left {
+    float: left;
+    color: #999;
+  }
+
+</style>
+
+<div style="padding-top:10px;" >
+    <div class="col"><p class="h3" align="center"><strong>Chatting as <u><%= user %></u></strong></p></div>
+</div>
+
+<div style="padding-top:10px; padding-bottom:10px; padding-left:30px; padding-right:30px;" >
+  <div class="container-fluid" id="chat-board">
+    <div id="messages" class="overflow-auto msgs" style="overflow-y: scroll;">
     </div>
     <form id="msgForm" action="" method="POST" style="bottom:0; margin: 0% 0% 0% 0%;">
-        <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Message" aria-label="Message" id="msg">
-              <div class="input-group-append">
-                <button class="btn btn-success" type="submit" id="sendBtn">Send</button>
-              </div>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Message" aria-label="Message" id="msg">
+        <div class="input-group-append">
+          <button class="btn btn-success" type="submit" id="sendBtn">Send</button>
         </div>
+      </div>
     </form>
+  </div>
 </div>
 
 <script type="text/javascript" src="chat.js"></script>
