--- a/src/app/views/history.ejs
+++ b/src/app/views/history.ejs
@@ -48,7 +48,7 @@
       if (i === msgs.length - 1) {
         scroll = true;
       }
-      addMsg(msgs[i], scroll);
+      await addMsg(msgs[i], scroll);
     }
   };
   
