--- a/src/app/views/home.ejs
+++ b/src/app/views/home.ejs
@@ -70,7 +70,7 @@
       if (i === msgs.length - 1) {
         scroll = true;
       }
-      addMsg(msgs[i], scroll);
+      await addMsg(msgs[i], scroll);
     }
   };
 
