cleaned up code, separated scripts into files

--- a/src/app/views/history.ejs
+++ b/src/app/views/history.ejs
@@ -40,24 +40,6 @@
 </div>
 
 <script type="text/javascript" src="index.js"></script>
-<script type="text/javascript">
-  window.onload = async () => {
-    const msgs = await loadHistory();
-    for (let i = 0; i < msgs.length; i+= 1) {
-      let scroll = false;
-      if (i === msgs.length - 1) {
-        scroll = true;
-      }
-      await addMsg(msgs[i], scroll);
-    }
-  };
-  
-  $(document).ready(() => {
-    $(window).resize(() => {
-      const bodyheight = window.innerHeight - 222;
-      $("#messages").height(bodyheight);
-    }).resize();
-  });
-</script>
+<script type="text/javascript" src="history.js"></script>
 
 <%- include("foot"); %>
