--- a/src/app/views/home.ejs
+++ b/src/app/views/home.ejs
@@ -54,48 +54,6 @@
 </div>
 
 <script type="text/javascript" src="index.js"></script>
-<script type="text/javascript">
-  window.onload = async () => {
-    const msgs = await loadAllMsgs();
-    for (let i = 0; i < msgs.length; i+= 1) {
-      let scroll = false;
-      if (i === msgs.length - 1) {
-        scroll = true;
-      }
-      await addMsg(msgs[i], scroll);
-    }
-  };
-
-  $(document).ready(() => {
-    $(window).resize(() => {
-      const bodyheight = window.innerHeight - 222;
-      $("#messages").height(bodyheight);
-    }).resize();
-  });
-
-  const socket = new WebSocket(`ws://${window.location.hostname}:${window.location.port}`);
-  socket.addEventListener("open", () => {
-    console.log("Connected to WS server");
-
-    $("#msgForm").on("submit", async (e) => {
-      e.preventDefault();
-
-      const msgInput = document.getElementById("msg");
-      const userInput = msgInput.value;
-      if (userInput !== "") {
-        const userName = await loadName();
-
-        msgInput.value = "";
-
-        socket.send(JSON.stringify({ name: userName, message: userInput }));
-      }
-    });
-  });
-
-  socket.addEventListener("message", (event) => {
-    const data = JSON.parse(event.data);
-    addMsg(data, true);
-  });
-</script>
+<script type="text/javascript" src="home.js"></script>
 
 <%- include("foot"); %>
