--- a/src/app/views/login.ejs
+++ b/src/app/views/login.ejs
@@ -75,13 +75,6 @@
   </div>
 </div>
 
-<script type="text/javascript">
-  $(document).ready(() => {
-    $(window).resize(() => {
-      const bodyheight = window.innerHeight - 116;
-      $("div.login-page").height(bodyheight);
-    }).resize();
-  });
-</script>
+<script type="text/javascript" src="login.js"></script>
 
 <%- include("foot"); %>
